# my-python-guide

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build-push-rule-text-moderation.yml  docker-build-push-xxxxxxxxxx.yml  test-and-lint-rule-text-moderation.yml  test-and-lint-xxxxxxx.yml
